# luftkvalitet

./: .gitignore  Cargo.2b30debd.toml  Cargo.2e368250.toml  Cargo.toml  README.md  index.html  luftkvalitet_bg.093d34cd.wasm  luftkvalitet_bg.35f76404.wasm  luftkvalitet_bg.42df480c.wasm  luftkvalitet_bg.4be7be8e.wasm  norske_api_er_bg.10e1573c.wasm  norske_api_er_bg.11e50632.wasm  norske_api_er_bg.1811809c.wasm  norske_api_er_bg.3251beea.wasm  norske_api_er_bg.4e160bf8.wasm  norske_api_er_bg.4f62c701.wasm  norske_api_er_bg.ba9e1b70.wasm  norske_api_er_bg.d2771df4.wasm  norske_api_er_bg.f637e64a.wasm  package-lock.json  package.json  static.1351bbfe.js  static.1351bbfe.js.map  static.215af3d6.js  static.215af3d6.js.map  static.50bb51b4.js  static.50bb51b4.js.map  static.559d7bb8.js  static.559d7bb8.js.map  static.7f6a67b8.js  static.7f6a67b8.js.map  static.935993a8.js  static.935993a8.js.map  static.95d7fb54.js  static.95d7fb54.js.map  static.d5d5495e.js  static.d5d5495e.js.map  static.d8d1d343.js  static.d8d1d343.js.map  static.e882fe62.js  (+12 more)
src/: app.rs  gbfs.rs  lib.rs  link_future.rs  nilu.rs
src/components/: area_select.rs  mod.rs  nav.rs  select.rs  station_select.rs
src/routes/: about.rs  bysykler.rs  fetch.rs  home.rs  luftkvalitet.rs  mod.rs  my_component.rs
static/: index.html  styles.scss
