[package]
authors = ["Stig Johan Berggren <stigjb@gmail.com>"]
categories = ["wasm"]
description = "Visualiser luftkvalitet i en Yew-app"
edition = "2018"
license = "Apache-2.0/MIT"
name = "luftkvalitet"
readme = "./README.md"
repository = "https://github.com/stigjb/luftkvalitet.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.8"
web_logger = "0.2.0"
yew = "0.15.0"
yew-router = "0.12.1"
wasm-bindgen = { version = "0.2.60", features = ["serde-serialize"] }
wee_alloc = "0.4.5"
wasm-bindgen-futures = "0.4.10"
web-sys = { version = "0.3.37", features = [
    "Document",
    "Element",
    "HtmlCollection"
] }
stdweb = "0.4.20"
serde = "1.0.106"
serde_json = "1.0.51"

[dev-dependencies]
wasm-bindgen-test = "0.3.10"
