[package]
authors = ["Stig Johan Berggren <stigjb@gmail.com>"]
categories = ["wasm"]
description = "Demonstrasjon av norske datakilder tilgjengelig via API-er på Internett"
edition = "2018"
license = "Apache-2.0/MIT"
name = "norske-api-er"
readme = "./README.md"
repository = "https://github.com/stigjb/norske-api-er.git"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
log = "0.4.8"
serde = "1.0.106"
serde_json = "1.0.51"
wasm-bindgen = { version = "= 0.2.60", features = ["serde-serialize"] }
wasm-bindgen-futures = "0.4.10"
wasm-logger = "0.2.0"
web-sys = { version = "0.3.37", features = [
    "Document",
    "Element",
    "HtmlCollection"
] }
wee_alloc = "0.4.5"
yew = "0.15.0"
yew-components = "0.1.0"
yew-router = "0.12.1"

[dev-dependencies]
wasm-bindgen-test = "0.3.10"
